# skills

./: .gitignore  AGENTS.md  ODDS-ANALYST-INTEGRATION.md  README.md
allsvenskan-predictor/: SKILL.md
allsvenskan-predictor/references/: league-rules.md  personas-league.md
allsvenskan-predictor/workspace/: ledger.md  mistakes.md
bilibili-publishing-workflows/: README.md  SKILL.md  basedpyrightconfig.json  pyproject.toml  pyrightconfig.json
bilibili-publishing-workflows/references/: b23-shortlinks.md  bilibili-video-poster-feishu-send.md  bilibili-video-poster.md  cli-usage.md  legacy-layout-iteration-notes.md  legacy-poster-regression-notes.md  provider-resolution.md  skill-cli-migration.md
bilibili-publishing-workflows/scripts/: __init__.py  bilibili_publish_cli.py
bilibili-publishing-workflows/templates/: bilibili-poster.css  bilibili-poster.html
bilibili-publishing-workflows/tests/: test_bilibili_publish_cli.py
i18n-workflow/: README.md  SKILL.md  checklists.md  contracts.md  i18n-workflow.md  package.json
i18n-workflow/references/: cli-usage.md  migration-assessment.md  provider-resolution.md  standard-runtime-workflow.md
imagegen-workflow/: SKILL.md  pyproject.toml
imagegen-workflow/agents/: openai.yaml
imagegen-workflow/references/: cli-usage.md  provider-resolution.md
imagegen-workflow/scripts/: imagegen_workflow_cli.py
imagegen-workflow/tests/: imagegen-workflow-cli.test.cjs
references/: cli-output-contract.md  migration-assessment.md  skill-cli-template.md
worldcup-predictor/: FINAL-REPORT-2026-07-07-08.md  SKILL.md
(+127 files in other folders)
