[project]
name = "imagegen-workflow"
version = "0.1.0"
description = "Stable CLI for image generation, edit-based text replacement, PNG postprocessing, and batch-driven image workflows"
requires-python = ">=3.11"
dependencies = [
  "pillow>=10.0.0",
  "requests>=2.31.0",
  "zstandard>=0.23.0",
]

[tool.uv]
package = false
